# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG   = fixed a bug that was (or could have been) crashing

Jul 16, 2001
	can work with software surfaces before pygame.init()
	Surface.convert() now can take arguments like pygame.Surface()
	pygame.display.set_icon() sets the windowmanager icon

Jul 15, 2001
	fixed bad internal display reference counting [BUG]

Jul 14, 2001
	still makes clean-ish exit if segfault in exit handling

Jul 10, 2001
	image.tostring makes alpha from colorkey, if asking for RGBA

Jul 6, 2001
	added python 1.5.2 compatability

June 25, 2001
	horizontal transform.flip() was reading pixels off by one [BUG]

June 24, 2001
	calling set_mode will change all references to the display surface


pygame-11
Jun 23, 2001
	removed smooth underline font render protection

Jun 19, 2001
	fixed botched image.save() function

Jun 15, 2001
	new inplace Rect calls: move_ip, union_ip, etc

Jun 11, 2001
	smarter locking with subsurfaces
	added transform.rotozoom(), which uses builtin SDL_rotozoom

May 31, 2001
	correctly handle unicode filenames

May 29, 2001
	set display physical palette with display.set_palette()
	added transform module (with rotate and scale)

May 26, 2001
	code compiles with macos now

May 23, 2001
	fixed line drawing of width 1
	draw.lines() was broken with sections outside clip

May 22, 2001
	added midleft, midright, midtop, and midbottom to Rect
	added Rect.unionall() function to union a list of Rects
	fixed problem in 16bit surfarrays
	new image.tostring() and image.fromstring()

May 20, 2001
	applied dave wallace's patch to fix memory freeing

May 17, 2001
	a few small compile time warning cleanups

May 16, 2001
	line drawing functions now use an optional width

May 15, 2001
	image module is now builtin, but formats are optional
	enhanced save function in image (handles opengl)
	Surface.save is now depracated

May 14, 2001